# telecom-churn-prediction

./: README.md  app.py  dicionario-dados.txt  pyproject.toml  requirements.txt
data/output/: financial_results.xlsx
data/processed/: df_test.csv  df_train.csv
models/: features.pkl
notebooks/: churn_modeling.ipynb  utils.py
src/: app.py  app_fastapi.py  app_frontend.py  frontend.py
