[project]
name = "telecom-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "fastapi==0.115.13",
    "joblib==1.4.2",
    "lightgbm==4.4.0",
    "matplotlib==3.10.1",
    "numpy==2.0.1",
    "optuna==4.4.0",
    "pandas==2.3.0",
    "pydantic==2.11.7",
    "scikit-learn==1.7.0",
    "seaborn==0.13.2",
    "streamlit==1.46.0",
    "uvicorn==0.32.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
